@@ -1,3 +1,10 @@
+2004-12-20  David N. Welton  <davidw@dedasys.com>
+
+	* generic/TclMagick.c (myMagickError): Use package name function
+	to generate error messages.
+	(wandObjCmd): Fixed bug that was causing AnnotateImage to not
+	function properly.
+
 2004-12-19  David N. Welton  <davidw@dedasys.com>
 
 	* INSTALL: Updated install instructions.
